<resources>
    <string name="app_name">Экзамен в магистратуру</string>
    <string name="screen_teory">Теоретический материал</string>
    <string name="name_list_1">Теория систем и системный анализ</string>
    <string name="name_list_2">Проетирование информационных систем</string>
    <string name="name_list_3">Основы теории управления</string>
    <string name="name_list_4">Технолигии баз данных</string>
    <string name="name_list_5">Программирование</string>
    <string name="name_list_6">Операционные системы</string>
    <string name="razdel1_1">Основные понятия, характеризующие строение и функционирование системы</string>
    <string name="razdel1_2">Понятие общесистемных закономерностей</string>
    <string name="razdel1_3">Основные преимущества и принципы системного подхода</string>
    <string name="razdel1_4">Методика системного анализа</string>
    <string name="razdel1_5">Качественные методы описания систем: метод мозговой атаки, метод экспертных оценок, метод "Дельфи"</string>
    <string name="razdel1_6">Кибернетический подход к описанию систем</string>
    <string name="razdel1_7">Особенности анализа и синтеза технических систем</string>
    <string name="razdel1_8">Особенности анализа и синтеза эргатических систем</string>
    <string name="razdel1_9">Особенности анализа и синтеза организационных систем</string>
    <string name="razdel2_1">Жизненный цикл программного изделия. Модели жизненного цикла</string>
    <string name="razdel2_2">Сущность структурного и объектно-ориентированного подходов к проектированию информационых систем</string>
    <string name="razdel2_3">Диаграммы потоков данных(DFD). Построение функциональной модели в виде иерархии диаграмм
    потоков данных</string>
    <string name="razdel2_4">Диаграммы «сущность-связь»(ERD). Типы отношений(один к одному, один к многим, многие ко многим). Построение схемы базы данных на
    основе ERD диаграмм</string>
    <string name="razdel3_1">Понятие об управляемой системе. Способы управления</string>
    <string name="razdel3_2">Понятие об управляемой системе. Принципы управления</string>
    <string name="razdel3_3">Понятие об управляемой системе. Формы управления</string>
    <string name="razdel3_4">Толкование понятия «управление»</string>
    <string name="razdel3_5">Информация, её роль в управлении</string>
    <string name="razdel3_6">Принцип необходимого разнообразия Эшби</string>
    <string name="razdel3_7">Основные понятия управления по принципу обратной связи</string>
    <string name="razdel3_8">Основные понятия управления по программному принципу</string>
    <string name="razdel3_9">Основные понятия управления при наличии объекта управления</string>
    <string name="razdel3_10">Функции управления</string>
    <string name="razdel3_11">Задача регулирования (стабилизации). Типы регуляторов</string>
    <string name="razdel3_12">Задача слежения, отличие от задачи регулирования</string>
    <string name="razdel3_13">Уровни управления в организации</string>
    <string name="razdel3_14">Управление в эргатических системах. Типы эргатических систем</string>
    <string name="razdel3_15">Управление. Показатели и критерии</string>
    <string name="razdel3_16">Оптимальная форма управления</string>
    <string name="razdel4_1">Основные понятия баз данных. Роль и место систем управления базами данных. Этапы развития СУБД</string>
    <string name="razdel4_2">Основные функции и возможности СУБД. Наиболее распростанённые СУБД и области их использования</string>
    <string name="razdel4_3">Реляционная модель данных. Понятие таблица, ключ, кортеж, атрибут, домен. Фундаментальные свойства отношений</string>
    <string name="razdel4_4">Основы реляционной алгебры. Операторы реляционной алгебры. Нормализация отношений</string>
    <string name="razdel4_5">Классификация моделей данных. Модель «объект - свойство - отношение». Проектирование схемы базы данных</string>
    <string name="razdel4_6">Обеспечение целостности данных. Архитектура и модели «клиент - сервер» в технологии БД </string>
    <string name="razdel4_7">Язык SQL. Назначение и основные операторы языка SQL. Представления </string>
    <string name="razdel4_8">Понятие транзакции и её свойства. Операторы COMMIT, ROLLBACK</string>
    <string name="razdel5_1">Основные принципы ООП. Реализация ООП в современных яхыках программирования</string>
    <string name="razdel5_2">Функции и процедуры в языках программирования</string>
    <string name="razdel5_3">Перегрузка операций и функций в языке C++</string>
    <string name="razdel5_4">Переменные в языках программирования. Область видимости и время жизни переменной.
    Динамические переменные</string>
    <string name="razdel5_5">Рекурсивные функции и алгоритмы</string>
    <string name="razdel5_6">Линейные односвязные и двусвязные списки.
        Реализация в современных языках программирования (C#,C++,Java) </string>
    <string name="razdel5_7">Деревья, бинарные деревья. Реализация в современных языках программирования (C#,C++,Java)</string>
    <string name="razdel5_8">Стек, очередь. Реализация в современных языках программирования (C#,C++,Java)</string>
    <string name="razdel5_9">Стачистические и виртуальные методы класса. Иерархические библиотеки классов</string>
    <string name="razdel5_10">Абстрактные методы и классы. Использование интерфейсов и абстрактных классов
    в современных языках программирования</string>
    <string name="razdel6_1">Назначения и основные функции операционных систем.</string>
    <string name="razdel6_2">Классификация операционных систем. Наиболее важные современные ОС, их области использования.</string>
    <string name="razdel6_3">Файловые системы ОС. Основные функции и требования к файловым системам </string>
    <string name="razdel6_4">Управление процессами в ОС. Жизненный цикл процесса. Виртуальная память процесса</string>
    <string name="razdel6_5">Механизмы синхронизации и обмена информацией между процессами</string>
    <string name="razdel6_6">Пользователи компьютера. Имена, пароли, права пользователей. Управление доступом к компьютеру</string>
    <string name="razdel6_7">Пользовательский интерфейс ОС. Графический пользовательский интерфейс (GUI). Основные элементы GUI
    </string>
    <string name="razdel6_8">Поддержка сетевых технологий в ОС. Сетевые ОС. Сетевые службы</string>
    <string name="razdel6_9">Безопасность и надёжность ОС. Способы создания информационных систем высокой надёжности</string>
    <string name="title_home">Теория</string>
    <string name="title_test">Тесты</string>
    <string name="title_fav">Закладки</string>
    <string name="test_v1">1 вариант</string>
    <string name="test_v2">2 вариант</string>
    <string name="test_v3">3 вариант</string>
    <string name="test_v4">4 вариант</string>
    <string name="test_v5">5 вариант</string>
    <string name="test_v6">6 вариант</string>
    <string name="Search_menu">search</string>
    <string name="add_in_fav">добавить в закладки</string>
    <string name="table_res">Таблица результатов</string>
    <string name="lbl_title_activity_search_result">Поиск</string>
</resources>
