<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pict"
    android:fitsSystemWindows="true"
    tools:context="com.example.a080218_00.myapplication_exam.razdel6"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <Button
        android:id="@+id/button61"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel6_1"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button62"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="95dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel6_2"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button63"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="170dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel6_3"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button64"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="245dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel6_4"
        android:textColor="@color/snow" />

        <Button
            android:id="@+id/button65"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="320dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel6_5"
            android:textColor="@color/snow" />
        <Button
            android:id="@+id/button66"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="395dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel6_6"
            android:textColor="@color/snow" />
        <Button
            android:id="@+id/button67"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="470dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel6_7"
            android:textColor="@color/snow" />
        <Button
            android:id="@+id/button68"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="545dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel6_8"
            android:textColor="@color/snow" />
        <Button
            android:id="@+id/button69"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="620dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel6_9"
            android:textColor="@color/snow" />


    </RelativeLayout>
</ScrollView>

