<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pict"
    android:fitsSystemWindows="true"
    tools:context="com.example.a080218_00.myapplication_exam.razdel4"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <Button
        android:id="@+id/button41"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel4_1"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button42"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="85dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel4_2"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button43"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel4_3"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button44"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="215dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel4_4"
        android:textColor="@color/snow" />

        <Button
            android:id="@+id/button45"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="280dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel4_5"
            android:textColor="@color/snow" />
        <Button
            android:id="@+id/button46"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="345dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel4_6"
            android:textColor="@color/snow" />
        <Button
            android:id="@+id/button47"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="410dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel4_7"
            android:textColor="@color/snow" />
        <Button
            android:id="@+id/button48"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="475dp"
            android:onClick="onClick"
            android:alpha="0.6"
            android:background="@color/colorPrimary"
            android:text="@string/razdel4_8"
            android:textColor="@color/snow" />

    </RelativeLayout>

</ScrollView>