<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pict"
    android:fitsSystemWindows="true"
    tools:context="com.example.a080218_00.myapplication_exam.razdel2">


    <Button
        android:id="@+id/button21"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel2_1"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="120dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel2_2"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button23"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel2_3"
        android:textColor="@color/snow" />

    <Button
        android:id="@+id/button24"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="320dp"
        android:onClick="onClick"
        android:alpha="0.6"
        android:background="@color/colorPrimary"
        android:text="@string/razdel2_4"
        android:textColor="@color/snow" />



</RelativeLayout>

